--- a/Commandliner/wwwroot/default.html
+++ b/Commandliner/wwwroot/default.html
@@ -1,26 +1,93 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&family=Space+Grotesk:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Commandliner | Your friend at the terminal.</title>
+    <link rel="shortcut icon" href="./favicon.png" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <h1>THIS IS MY STATIC FILE INDEX.HTML...</h1>
+    <div class="container">
+      <header>
+        <nav class="navigation-container">
+          <h1 class="logo">Commandliner</h1>
 
-    <table class="table table-bordered">
-      <tr>
-        <th>Name</th>
-        <th>Age</th>
-      </tr>
-      <tr>
-        <td>Mahmoud</td>
-        <td>23</td>
-      </tr>
-    </table>
+          <ul class="navigation-list">
+            <li class="navigation-item view-commands-btn">> View commands</li>
+            <li class="navigation-item add-commands-btn">> Add commands</li>
+          </ul>
+        </nav>
+      </header>
+      <main>
+        <div class="display-area">
+          <div class="commands-container">
+            <!-- <div class="command">
+              <h2 class="how-to">
+                How to run a .NET Core app with live-reload
+              </h2>
+              <p class="platform">.NET Core CLI</p>
+              <div class="line-container">
+                <p class="line">dotnet watch run</p>
+              </div>
+            </div>
 
-    <script src="js/script.js"></script>
+            <div class="command">
+              <h2 class="how-to">
+                How to run a .NET Core app with live-reload
+              </h2>
+              <p class="platform">.NET Core CLI</p>
+              <div class="line-container">
+                <p class="line">dotnet watch run</p>
+              </div>
+            </div> -->
+          </div>
+          <div class="form-container hidden">
+            <form action="#">
+              <label for="how-to">How to?</label>
+              <input
+                placeholder="example: How to compile a Java class"
+                type="text"
+                name="how-to"
+                class="how-to-input"
+                     required
+              />
+              <label for="platform" name>Platform</label>
+              <input
+                placeholder="Java"
+                type="text"
+                name="platform"
+                class="platform-input"
+                     required
+              />
+              <label for="line" name>Command</label>
+              <input
+                placeholder="javac ClassName.java"
+                type="text"
+                name="line"
+                class="line-input"
+                     required
+              />
+              <button class="add-command-btn">> Add command</button>
+            </form>
+          </div>
+        </div>
+      </main>
+        <footer>
+            &copy; Mahmoud Fawzy 2021 | <a href="https://mahmoudfawzy.live/">mahmoudfawzy.live</a>
+        </footer>
+    </div>
+    <script src="./js/script.js"></script>
   </body>
 </html>
