--- a/Commandliner/wwwroot/default.html
+++ b/Commandliner/wwwroot/default.html
@@ -61,7 +61,7 @@
                 type="text"
                 name="how-to"
                 class="how-to-input"
-                     required
+                required
               />
               <label for="platform" name>Platform</label>
               <input
@@ -69,7 +69,7 @@
                 type="text"
                 name="platform"
                 class="platform-input"
-                     required
+                required
               />
               <label for="line" name>Command</label>
               <input
@@ -77,17 +77,18 @@
                 type="text"
                 name="line"
                 class="line-input"
-                     required
+                required
               />
               <button class="add-command-btn">> Add command</button>
             </form>
           </div>
         </div>
       </main>
-        <footer>
-            &copy; Mahmoud Fawzy 2021 | <a href="https://mahmoudfawzy.live/">mahmoudfawzy.live</a>
-        </footer>
     </div>
+    <footer>
+      &copy; Mahmoud Fawzy 2021 |
+      <a href="https://mahmoudfawzy.live/">mahmoudfawzy.live</a>
+    </footer>
     <script src="./js/script.js"></script>
   </body>
 </html>
